// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amount -Demo Basic 1`] = `
<div class="n22-example-child n22-example-child-amount">
  <p><span class="describe">Original</span> <span><span class="n22-amount numerical">1234.125</span>
    <!----></span></p>
  <p><span class="describe">Round</span> <span><span class="n22-amount numerical">1234.13</span>
    <!----></span></p>
  <p><span class="describe">Floor</span> <span><span class="n22-amount numerical">1234.12</span>
    <!----></span></p>
</div>
`;

exports[`Amount -Demo Disabled unselected 1`] = `
<div class="n22-example-child n22-example-child-amount"><span><span class="n22-amount"> 壹仟贰佰叁拾肆元整 </span>
  <!----></span> <span><span class="n22-amount"> 壹拾贰元叁角肆分 </span>
  <!----></span> <span><span class="n22-amount"> 壹仟贰佰元整 </span>
  <!----></span> <span><span class="n22-amount"> 壹仟贰佰零壹元整 </span>
  <!----></span></div>
`;

exports[`Amount -Demo Thousands Separator 1`] = `
<div class="n22-example-child n22-example-child-amount"><span><span class="n22-amount numerical">1,234.00</span>
  <!----></span></div>
`;

exports[`Amount -Demo Transition 1`] = `
<div class="n22-example-child n22-example-child-amount"><span><span class="n22-amount numerical">0.00</span>
  <!----></span></div>
`;
